<resources>
    <string name="app_name">Sistema Inventario</string>
    <string name="limpiar">Limpiar</string>
    <string name="error_ingresar">Error al tratar de ingresar el registro a la Base de Datos.</string>
    <string name="exito_ingresar">Insertado en la posicion</string>
    <string name="error_ingresar_ws">No se pudo ingresar el dato.</string>
    <string name="exito_ingresar_ws">Insertado con exito.</string>
    <string name="campos_vacios">Revisar que ningun campo de texto vaya vacío</string>
    <string name="autor_id">ID Autor</string>
    <string name="autor_nombre">Nombres</string>
    <string name="autor_apellido">Apellidos</string>
    <string name="autor_insertar">Agregar Autor</string>
    <string name="autor_consultar">Consultar Autor</string>
    <string name="autor_eliminar">Eliminar Autor</string>
    <string name="autor_actualizar">Actualizar Autor</string>
    <string name="autor_listar">Listar Autores</string>
    <string name="equipo_id">ID Equipo</string>
    <string name="equipo_codigo">Codigo Equipo</string>
    <string name="equipo_fecha">Adquisicion Equipo</string>
    <string name="equipo_estado">Estado Equipo</string>
    <string name="equipo_tipo_producto">Tipo producto</string>
    <string name="equipo_ubicacion">Ubicacion</string>
    <string name="equipo_catalogo">Catalogo Equipo</string>
    <string name="equipo_insertar">Agregar Equipo</string>
    <string name="equipo_consultar">Consultar Equipo</string>
    <string name="equipo_eliminar">Eliminar Equipo</string>
    <string name="equipo_actualizar">Actualizar Equipo</string>
    <string name="reserva_movimiento">Movimiento</string>
    <string name="reserva_horario">Horario</string>
    <string name="reserva_horario_actualizar">Nuevo horario</string>
    <string name="reserva_insertar">Agregar Reserva</string>
    <string name="reserva_consultar">Consultar Reserva</string>
    <string name="reserva_eliminar">Eliminar Reserva</string>
    <string name="reserva_actualizar">Actualizar Reserva</string>
    <string name="insertarDetalleDescargo">Insertar DetalleDescargo</string>
    <string name="actualizarDetalleDescargo">Actualizar DetalleDescargo</string>
    <string name="consultarDetalleDescargo">Consultar DetalleDescargo</string>
    <string name="eliminarDetalleDescargo">Eliminar DetalleDescargo</string>
    <string name="idEquipo">ID Equipo Informático</string>
    <string name="insertarDescargo">Insertar Descargo</string>
    <string name="actualizarDescargo">Actualizar Descargo</string>
    <string name="consultarDescargo">Consultar Descargo</string>
    <string name="eliminarDescargo">Eliminar Descargo</string>
    <string name="insertarDescargoWS">Insertar Descargo (WebService)</string>
    <string name="actualizarDescargoWS">Actualizar Descargo (WebService)</string>
    <string name="consultarDescargoWS">Consultar Descargo (WebService)</string>
    <string name="eliminarDescargoWS">Eliminar Descargo (WebService)</string>
    <string name="idDescargos">ID Descargos</string>
    <string name="idOrigen">ID Ubicación Origen</string>
    <string name="idDestino">ID Ubicación Destino</string>
    <string name="descargoFecha">Fecha Descargo</string>
    <string name="insertarCatalogoEquipo">Insertar Catálogo Equipo</string>
    <string name="actualizarCatalogoEquipo">Actualizar Catálogo Equipo</string>
    <string name="eliminarCatalogoEquipo">Eliminar Catálogo Equipo</string>
    <string name="consultarCatalogoEquipo">Consultar Catálogo Equipo</string>
    <string name="insertarCatalogoEquipoWS">Insertar Catálogo Equipo (WebService)</string>
    <string name="actualizarCatalogoEquipoWS">Actualizar Catálogo Equipo (WebService)</string>
    <string name="eliminarCatalogoEquipoWS">Eliminar Catálogo Equipo (WebService)</string>
    <string name="consultarCatalogoEquipoWS">Consultar Catálogo Equipo (WebService)</string>
    <string name="idCatalogo">ID Catálogo</string>
    <string name="idMarca">ID Marca</string>
    <string name="modeloEquipo">Modelo Equipo Generico</string>
    <string name="memoria">Memoria</string>
    <string name="cantEquipo">Cantidad Equipo</string>
    <string name="btn_agregar_motivo">Agregar Motivo</string>
    <string name="id_de_motivo">ID de Motivo:</string>
    <string name="btn_eliminar_motivo">Eliminar Motivo</string>
    <string name="Nombremotivo">Motivo:</string>
    <string name="btn_consultar_motivo">Consultar Motivo</string>
    <string name="btn_actualizar_motivo">Actualizar Motivo</string>
    <string name="btn_agregar_motivo_ws">Agregar Motivo (WebService)</string>
    <string name="btn_eliminar_motivo_ws">Eliminar Motivo (WebService)</string>
    <string name="btn_consultar_motivo_ws">Consultar Motivo (WebService)</string>
    <string name="btn_actualizar_motivo_ws">Actualizar Motivo (WebService)</string>
    <string name="tipo_de_motivo">Tipo de Motivo :</string>
    <string name="equipo_obsoleto">Equipo Obsoleto :</string>
    <string name="equipo_de_reemplazo">Equipo de Reemplazo :</string>
    <string name="docente">Docente :</string>
    <string name="btn_agregar_sustitucion">Agregar Sustitucion</string>
    <string name="id_de_la_sustitucion">ID de la Sustitucion: :</string>
    <string name="btn_eliminar_sustitucion">Eliminar Sustitucion</string>
    <string name="btn_consultar_sustitucion">Consultar Sustitucion</string>
    <string name="btn_actualizar_sustitucion">Actualizar Sustitucion</string>
    <string name="btn_agregar_sustitucion_ws">Agregar Sustitucion (WebService)</string>
    <string name="btn_eliminar_sustitucion_ws">Eliminar Sustitucion (WebService)</string>
    <string name="btn_consultar_sustitucion_ws">Consultar Sustitucion (WebService)</string>
    <string name="btn_actualizar_sustitucion_WS">Actualizar Sustitucion (WebService)</string>
    <string name="insertarTipoProducto">Insertar TipoProducto</string>
    <string name="actualizarTipoProducto">Actualizar TipoProducto</string>
    <string name="eliminarTipoProducto">Eliminar TipoProducto</string>
    <string name="consultarTipoProducto">Consultar TipoProducto</string>
    <string name="idTipoProducto">ID TipoProducto</string>
    <string name="nomTipoProducto">Nombre TipoProducto</string>
    <string name="categoria_id">ID Categoria</string>
    <string name="btn_insertar_tipoproducto">Insertar TipoProducto</string>
    <string name="btn_consultar_tipoproducto">Consultar TipoProducto</string>
    <string name="btn_eliminar_tipoproducto">Eliminar TipoProducto</string>
    <string name="btn_actualizar_tipoproducto">Actualizar TipoProducto</string>
    <string name="btn_insertar_tipoproducto_ws">Insertar TipoProducto (WebService)</string>
    <string name="btn_consultar_tipoproducto_ws">Consultar TipoProducto (WebService)</string>
    <string name="btn_eliminar_tipoproducto_ws">Eliminar TipoProducto (WebService)</string>
    <string name="btn_actualizar_tipoproducto_ws">Actualizar TipoProducto (WebService)</string>
    <string name="tipoProducto">TipoProducto</string>
    <string name="insertarUbicaciones">Insertar Ubicacion</string>
    <string name="actualizarUbicaciones">Actualizar Ubicacion</string>
    <string name="eliminarUbicaciones">Eliminar Ubicacion</string>
    <string name="consultarUbicaciones">Consultar Ubicacion</string>
    <string name="idUbicacion">ID Ubicacion</string>
    <string name="nomUbicacion">Nombre Ubicacion</string>
    <string name="btn_insertar_ubicacion">Insertar Ubicacion</string>
    <string name="btn_eliminar_ubicacion">Eliminar Ubicacion</string>
    <string name="btn_consultar_ubicacion">Consultar Ubicacion</string>
    <string name="btn_actualizar_ubicacion">Actualizar Ubicacion</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="btn_insertar_ubicacion_ws">Insertar Ubicacion (WebService)</string>
    <string name="btn_eliminar_ubicacion_ws">Eliminar Ubicacion (WebService)</string>
    <string name="btn_consultar_ubicacion_ws">Consultar Ubicacion (WebService)</string>
    <string name="btn_actualizar_ubicacion_ws">Actualizar Ubicacion (WebService)</string>
    <string name="tipo_de_movimiento">Tipo de movimiento</string>
    <string name="descripcion">Descripcion</string>
    <string name="prestamo_fecha_ini">Prestamo Fecha Inicio</string>
    <string name="prestamo_fecha_fin">Prestamo Fecha Final</string>
    <string name="prestamo_permanente">Prestamo Permanente</string>
    <string name="btn_agregar_mov_inv">Insertar Movimiento Inventario</string>
    <string name="prestamo_activo">Prestamo Activo</string>
    <string name="id_del_mov_inv">ID Prestamo</string>
    <string name="btn_consultar_mov_inv">Consultar Movimiento Inventario</string>
    <string name="btn_eliminar_movimiento_inv">Eliminar Movimiento Inventario</string>
    <string name="btn_actualizar_mov_inv">Actualizar Movimiento Inventario</string>
    <string name="cambiar_a_ws">Cambiar a modo WS</string>
    <string name="cambiar_a_sqlite">Cambiar a modo SQLite</string>
    <string name="selecciona_item">** Selecciona un item **</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="singin">Iniciar Sesion</string>
    <string name="singing_error">Credenciales no validas</string>
    <string name="singing_error_vacios">Complete todos los campos</string>
    <string name="no_permiso">Usted no tiene permisos para esa accion</string>
    <string name="menu_item_autor">Autor</string>
    <string name="menu_item_detalleautor">DetalleAutor</string>
    <string name="menu_item_participaciondocente">ParticipacionDocente</string>
    <string name="menu_item_documento">Documento</string>
    <string name="menu_item_equipoinformatico">EquipoInformatico</string>
    <string name="menu_item_catalogoequipo">CatalogoEquipo</string>
    <string name="menu_item_motivo">Motivo</string>
    <string name="menu_item_sustituciones">Sustituciones</string>
    <string name="menu_item_detallereservaequipo">DetalleReservaEquipo</string>
    <string name="menu_item_descargos">Descargos</string>
    <string name="menu_item_detalledescargos">DetalleDescargos</string>
    <string name="menu_item_movimientoinventario">MovimientoInventario</string>
    <string name="menu_item_llenarbase">Llenar Base de Datos</string>
    <string name="menu_item_cerrarsesion">Cerrar sesión</string>
    <string name="menu_item_tipoproducto">TipoProducto</string>
    <string name="menu_item_docente">Docente</string>
    <string name="menu_item_ubicaciones">Ubicaciones</string>
    <string name="bienvenida">Bienvenido otra vez, %s</string>
    <string name="id_del_documento">ID del documento:</string>
    <string name="id_del_autor">ID del Autor:</string>
    <string name="es_el_autor_principal">Es el autor principal?</string>
    <string name="detalle_autor">Detalle Autor</string>
    <string name="agregar_detalleautor">Agregar DetalleAutor</string>
    <string name="eliminar_detalleautor">Eliminar DetalleAutor</string>
    <string name="consultar_detalleautor">Consultar DetalleAutor</string>
    <string name="actualizar_detalleautor">Actualizar DetalleAutor</string>
    <string name="menu_item_insertar">Insertar %s</string>
    <string name="menu_item_lista">Lista %s</string>
    <string name="menu_item_consultar">Consultar %s</string>
    <string name="menu_item_actualizar">Actualizar %s</string>
    <string name="menu_item_eliminar">Eliminar %s</string>
    <string name="menu_item_insertar_ws">Insertar %s (WebService)</string>
    <string name="tipo_de_producto">Tipo de producto:</string>
    <string name="idioma">Idioma:</string>
    <string name="isbn">ISBN:</string>
    <string name="edicion">Edicion:</string>
    <string name="editorial">Editorial:</string>
    <string name="titulo">Titulo:</string>
    <string name="agregar_documento">Agregar Documento</string>
    <string name="actualizar_documento">Actualizar Documento</string>
    <string name="consultar_documento">Consultar Documento</string>
</resources>